# GPUAndroidUp

./: .gitignore  README.md  fft_model_debug2.tflite  generate_charts.py  generate_overview_charts.py  generate_thermal_energy_charts.py  generate_transfer_compute_summary.py  generate_transfer_overview.py  merge_benchmarks.py  settings.gradle.kts
app/: build.gradle.kts
app/libs/pythonmodels/: CorrelationModel.ipynb  InitialConfig.ipynb  JerkModelWindowed.ipynb  MadModel.ipynb  MakeMadModel5Sensors.ipynb  corr_model_optimized.tflite  correlation_model.tflite  correlation_model_windowed.tflite  cross_axis_corr_model.tflite  cross_axis_corr_model_int8.tflite  cross_axis_corr_model_optimized.tflite  jerk_model_multisensors.tflite  jerk_model_windowed.tflite  mad_model.tflite  mad_model_multisensors.tflite  mad_model_multisensors_float32_notimestamp.tflite  make_fft_model.py  make_mad_model_float.py  requirements.txt
app/src/BANCHMARK/comparativo-09-12/: benchmark_results.csv
app/src/BANCHMARK/comparativo-30-11/: benchmark_results.csv
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: colors.xml  (+2 more)
docs/: fft_pipeline.md
docs/tcc/: 01_introducao.md  02_revisao_bibliografica.md  03_metodologia.md  04_resultados.md  05_conclusoes.md
fft_models/: fft_model_16384.tflite  fft_model_4096.tflite  fft_model_8192.tflite
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: generate_fft_rfft_models.py
vulkanfft/: build.gradle.kts
vulkanfft/src/main/: AndroidManifest.xml
vulkanfft/src/main/cpp/: CMakeLists.txt  vkfft_bridge.cpp
(+303 files in other folders)
